Bug 674888 - Allow elfhack to move .interp sections. r=tglek